<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPasswordEmailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/child_margin_top"
        android:hint="@string/profileEmail"
        android:textColorHint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgotPasswordEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPasswordTokenTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPasswordEmailTextInputLayout"
        android:layout_marginTop="@dimen/child_margin_top"
        android:hint="@string/Token"
        android:textColorHint="@color/colorPrimary"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgotTokenEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textNoSuggestions"
            android:drawableEnd="@drawable/ic_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPasswordPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPasswordTokenTextInputLayout"
        android:layout_marginTop="@dimen/child_margin_top"
        android:hint="@string/newPassword"
        android:textColorHint="@color/colorPrimary"
        android:visibility="gone"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgotPasswordPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ForgotPasswordResetPasswordButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ForgotPasswordPasswordTextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/resetPassword"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/ForgotPasswordTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPasswordResetPasswordButton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/ForgotPasswordProgressBar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPasswordTextMessage"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>